--- a/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
@@ -1,7 +1,7 @@
 
-$color-3:#F9AE3B; /* institucional PRINCIPAL */
-$color-3-primary_hover:#F5911E;
-$color-2:#F5911E; /* institucional OSCURO -  */
+$color-3:#ff5a5f; /* institucional PRINCIPAL */
+$color-3-primary_hover:#ff7377;
+$color-2:#e0494d; /* institucional OSCURO -  */
 
 
 
