--- a/resources/assets/sass/creative_template_mixer.scss
+++ b/resources/assets/sass/creative_template_mixer.scss
@@ -34,3 +34,4 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_clientes"; 
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_portada_nav";
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_team_nueva";
+@import "resources/assets/sass/Secciones_y_Helpers/Seccion_contacto";
