--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
@@ -8,7 +8,7 @@
 }
 
 .contacto_img{
-  width: 100%;
+  width: 200px;
   height: auto;
   border-radius:100%;
   margin-bottom: 20px;
@@ -17,7 +17,16 @@
 .contacto_name{
   font-size: 30px;
   margin-bottom: 5px;
+  padding:8px;
+  border-radius:4px;
+  color:white;
+  background-color: $color-3;
+}
 
+.contacto_aclaracion{
+  font-size: 16px;
+  margin-bottom: 5px;
+  
 }
 
 
@@ -29,5 +38,9 @@
   .contiene_contacto_img{
   width:70%;
   }
+
+  .contacto_img{
+  width: 300px;
+}
   
 }
