--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
@@ -1,5 +1,5 @@
 .contiene_contacto_img{
-  width:80%;
+  
   @include flexbox;       
   @include flex-direction(column);
   @include align-items(center); 
@@ -15,18 +15,18 @@
 }
 
 .contacto_name{
-  font-size: 30px;
+  font-size: 20px;
   margin-bottom: 5px;
   padding:8px;
   border-radius:4px;
   color:white;
-  background-color: $color-3;
+  border-bottom:solid 4px $color-3;
 }
 
 .contacto_aclaracion{
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 5px;
-  
+
 }
 
 
@@ -36,7 +36,7 @@
  @media (min-width: $BrackPoint-Secundario){
 
   .contiene_contacto_img{
-  width:70%;
+  
   }
 
   .contacto_img{
