--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -89,6 +89,11 @@
   color: white;
 }
 
+/*color-texto-verde-success*/
+.color-text-success{
+  color:$color-verde-texto-success;
+}
+
 .font-primary{
   font-family:$font-primary;
 }
