--- a/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
@@ -9,6 +9,9 @@ $color-gris-text:#b4b4b4 ;
 $color-gris-background: #ffefef;
 $color-gris-lineas: #ffefef;
 
+/*verdes*/
+$color-verde-texto-success:#4BB543;
+
 
 
 
