--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
@@ -28,6 +28,7 @@
   @include flexbox;       
   @include flex-direction(row);
   @include align-items(center); 
+  @include flex-wrap(wrap); 
 }
   .Seccion_precio_moneda{
     color:$color-gris-text;
