--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
@@ -40,6 +40,10 @@
     font-weight:bold;
     font-size:35px;
   }
+
+.Seccion-_precio_separacion{
+  margin-left: 15px;
+}  
 .Seccion_precio_importe_oferta_cartel{
   padding:20px;
   font-weight: bold;
