--- a/resources/assets/sass/template_Creative/_navbar.scss
+++ b/resources/assets/sass/template_Creative/_navbar.scss
@@ -50,7 +50,7 @@
     }
     .navbar-nav > li.nav-item > a.nav-link,
     .navbar-nav > li.nav-item > a.nav-link:focus {
-      color: fade-out($white, .3);
+      color: fade-out($color-gris-text, .3);
       &:hover {
         color: $white;
       }
