--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
@@ -45,13 +45,14 @@
   margin-left: 15px;
 }  
 .Seccion_precio_importe_oferta_cartel{
-  padding:20px;
+  padding:10px 20px;
   font-weight: bold;
   color:white;
   border-radius:4px;
   margin-top: 10px;
   background-color:$color-3;
   text-align: center;
+  width: 100%;
 
 }
 .Seccion_precio_importe_precio_tachado{
