--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
@@ -11,6 +11,9 @@
     padding:40px 10px;    
     text-align: center;
     margin-bottom: 32px;
+    -webkit-box-shadow: 13px 10px 21px -7px rgba(186,184,186,1);
+    -moz-box-shadow: 13px 10px 21px -7px rgba(186,184,186,1);
+    box-shadow: 13px 10px 21px -7px rgba(186,184,186,1);
 }
 
 .Seccion_precio_icono{  
