--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -11,6 +11,7 @@
 
 
 @import "resources/assets/sass/Admin/formularios/formulario_estilos";
+@import "resources/assets/sass/Admin/Home_Entidades/layoute_general";
 @import "resources/assets/sass/Admin/Home_Entidades/Empresa";
 @import "resources/assets/sass/Admin/Home_Entidades/home";
 /*@import "resources/assets/sass/Admin/Home_Entidades/marcas";*/
