--- a/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
@@ -55,6 +55,15 @@ $Color-Rojo-Cancelar: #FF0000;
 $Color-Rojo-Texto-Error: #B40404;
 $Color-Errors-BG: #FCB6B6;
 $Color-Rosado-Active-Cancelar-Bg:#FDB6BF ;
+$Color-Verde-Super-Claro:#DFF2BF ;
+
+
+/*alertas y errores*/
+$Color-Amarill-warning: #fff0ba;
+
+$Color-Texto-Warning:#aa8749;
+
+$Color-Verde-Google: #006621;
 
 
 
