--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -19,3 +19,14 @@
 @import "resources/assets/sass/Admin/Home_Entidades/Users";
 
 
+
+
+//Errores
+@import "resources/assets/sass/Estilo/Errores/Errores";
+
+
+//Alerts
+@import "resources/assets/sass/Estilo/Alerts/aviso_Verifica_Email";
+@import "resources/assets/sass/Estilo/Alerts/alert_status";
+
+
