--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -3,7 +3,7 @@
       @include flex-direction(row);
       @include align-items(flex-start);
       @include justify-content(flex-start);
-      
+      @include flex-wrap(wrap);      
       margin-top: 30px;
       width:100%;
 }
