--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -16,18 +16,17 @@
       padding: 6px;      
       border-radius:6px;
       margin-right: 15px;
-      max-width: 460px;
+      width: 49%;
 
    }
     .contenedor-grupo-datos-titulo{
      padding:8px;
      margin-bottom: 8px;
-     font-size: 16px;
-     color: $Color-texto-gris-Mercadolibre;
-     color:white;
-     background-color:$color-3 ;
+     font-size: 16px;     
+     color:black;     
      width: 100%;
      border-radius:4px;
+     font-weight: bold;
     }
 
 
