--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -2,7 +2,7 @@
       @include flexbox; 
       @include flex-direction(row);
       @include align-items(flex-start);
-      @include justify-content(flex-start);
+      @include justify-content(space-around);
       @include flex-wrap(wrap);      
       margin-top: 30px;
       width:100%;
