--- a/resources/assets/sass/Admin/Home_Entidades/layoute_general.scss
+++ b/resources/assets/sass/Admin/Home_Entidades/layoute_general.scss
@@ -146,7 +146,7 @@
   color: $color-2light;
 }
 .admin-columna-contenedor a li:not(.Helper-Class-Active):hover span{
-  color: $color-2superlight;
+  color: $color-3light;
 }
 
 // link inferior (para volver a la pagina)
