--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -12,10 +12,8 @@
       @include flexbox; 
       @include flex-direction(column);
       @include align-items(flex-start);
-      margin-bottom: 15px;
-      padding: 6px;      
-      border-radius:6px;
-      margin-right: 15px;
+      margin-bottom: 15px;          
+      border-radius:6px;      
       width: 49%;
 
    }
@@ -40,7 +38,7 @@
              @include flexbox; 
              @include flex-direction(column);
              @include align-items(flex-start);
-             width: 320px;
+             width:100%;
              padding: 4px;
              border-radius: 4px;
              border:solid 1px transparent;
