--- a/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
@@ -12,8 +12,8 @@ $color-2superlight:#f07f83;
 $color-3dark:#917e4b; /* para interacciones dinámicas del color-3 como [hover] o [active] */
 /*$color-3light:#e5d8bd;*/ /* para interacciones dinámicas del color-3 como [hover] o [active] */
 $color-3light:$color-3-primary_hover; /* probando uno mas oscurito */
-$color-3superlight:#f1e7d2; /* para backgrounds de bloques de texto en instancia de hover) */
-$color-3hyperlight:#f8f1e3;
+$color-3superlight:$color-3-primary_hover; /* para backgrounds de bloques de texto en instancia de hover) */
+$color-3hyperlight:$color-3-primary_hover;
 
 
 
