--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -7,6 +7,7 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_Plug-flex"; 
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas";
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_Recets";
+@import "resources/assets/sass/Secciones_y_Helpers/Helper_normalice";
 
 
 
