--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
@@ -31,3 +31,8 @@ a:hover, a:focus, a>p:hover, a>p:focus{
     box-shadow: none !important;
     outline: 0 none !important;
 }
+
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
