--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
@@ -21,6 +21,10 @@ a:hover, a:focus, a>p:hover, a>p:focus{
   font-family: $font-secondary;
  }
 
+ a{
+  color: $color-3;
+ }
+
  a:hover{
   color: $color-3-primary_hover;
  }
