--- a/resources/assets/sass/Admin/Home_Entidades/Users.scss
+++ b/resources/assets/sass/Admin/Home_Entidades/Users.scss
@@ -72,5 +72,5 @@
           @include Boton-Chico($color-3);
          }
          .boton-acciones-editar:hover{
-          background-color:$color-3dark;
+          background-color:$color-3light;
          }
