--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -4,6 +4,7 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_mediCueris";
 @import "resources/assets/sass/plugins/Flickity"; 
 @import "resources/assets/sass/plugins/Tooltipster"; 
+@import "resources/assets/sass/plugins/Plug-bootstrap-fileinput";
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_Plug-flex"; 
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas";
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_Recets";
