--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,3 +1,4 @@
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes";
 @import "resources/assets/sass/Secciones_y_Helpers/Helper_botones";
