--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
@@ -38,5 +38,14 @@ a:hover, a:focus, a>p:hover, a>p:focus{
 
 
 *, *:before, *:after {
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
+
+ .btn-primary{
+  background-color: $color-3;
+  color:white;
+ }
+
+ .btn-primary:hover{
+  background-color:$color-3-primary_hover ;
+ }
