--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -129,3 +129,14 @@
 .no-mostrar{
   display:none;
 }
+
+
+/*simula un link*/
+.simula_link{
+  cursor:pointer;
+  color:  $color-3;
+}
+
+.simula_link:hover{
+  color:$color-3-primary_hover;
+}
