--- a/resources/assets/sass/creative_template_mixer.scss
+++ b/resources/assets/sass/creative_template_mixer.scss
@@ -13,7 +13,7 @@
 @import "resources/assets/sass/template_Creative/_services";
 @import "resources/assets/sass/template_Creative/_portfolio";
 @import "resources/assets/sass/template_Creative/_bootstrap-overrides";
-@import "resources/assets/sass/template_Creative/font-awesome/scss/font-awesome";
+/*@import "resources/assets/sass/template_Creative/font-awesome/scss/font-awesome";*/
 @import "resources/assets/sass/template_Creative/magnific-popup";  
 
 
