--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_footer.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_footer.scss
@@ -1,52 +1,4 @@
-/* estilo cambia footer */
-.footer_social_icon_facebook{
-width: 40px;
-height: 40px;
-background-image: url('../../imagenes/Iconos/social_icon_facebook3.png');
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-}
 
-.footer_social_icon_facebook:hover { 
- background-image: url('../../imagenes/Iconos/social_icon_facebook4.png');
-}
-
-/* estilo cambia footer */
-.footer_social_icon_instagram{
-width: 40px;
-height: 40px;
-background-image: url('../../imagenes/Iconos/social_icon_instagram3.png');
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-}
-
-.footer_social_icon_instagram:hover { 
- background-image: url('../../imagenes/Iconos/social_icon_instagram4.png');
-}
-/* estilo cambia footer */
-.footer_social_icon_twitter{
-width: 40px;
-height: 40px;
-background-image: url('../../imagenes/Iconos/social_icon_twitter3.png');
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-}
-
-.footer_social_icon_twitter:hover { 
- background-image: url('../../imagenes/Iconos/social_icon_twitter4.png');
-}
-
-
-/* P R E L O A D I N G O N - H O V E R I M A G E S to speed up the effect */
-body::after{
-position:absolute; width:0; height:0; overflow:hidden; z-index:-1000;
-content:url('../../imagenes/Iconos/social_icon_facebook4.png')
-        url('../../imagenes/Iconos/social_icon_instagram4.png') 
-        url('../../imagenes/Iconos/social_icon_twitter4.png');
-}
 
 /* contiene-cada-columna-del-footer */
 .contenedor-columna-footer{
@@ -60,7 +12,15 @@ content:url('../../imagenes/Iconos/social_icon_facebook4.png')
   height:auto;
 }
 
-/* borde-del-contenedor-de-cobtacto-en-el-footer */
+.footer-icono-social{
+  font-size: 40px;
+  padding:5px;
+  border-radius: 4px;  
+}
+.footer-icono-social:hover{
+  background-color:$color-3-primary_hover;
+  color:white;
+}
 
 
 
