--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -87,6 +87,12 @@
   margin-bottom: 8px;
 }
 
+.espacio-letras-chico{
+  letter-spacing: 1px;
+  font-family: arial;
+  margin-bottom: 8px;
+}
+
 /* colores personalizados */
 .color-text-gris{
   color: $color-gris-text;
