--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_footer.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_footer.scss
@@ -13,8 +13,8 @@
 }
 
 .footer-icono-social{
-  font-size: 40px;
-  padding:5px;
+  font-size: 35px;
+  padding:3px 8px;
   border-radius: 4px;  
 }
 .footer-icono-social:hover{
