--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_slider_header.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_slider_header.scss
@@ -32,13 +32,11 @@
   padding: 1rem 2rem;
 }
 
-.Slider_cabecer_img, .no_mostrar_en_small{
-  display:none;
+.Slider_cabecer_img{
+  
 }
 
-.Slider_cabecer_img_responsive, .mostrar_en_small{
 
-}
 
 
 @media (min-width: $BrackPoint-Primario){
