--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
@@ -1,3 +1,7 @@
+.formulario-contacto-wraper{
+  padding:4px 10px;
+}
+
 .contiene_contacto_img{
   
   @include flexbox;       
@@ -35,6 +39,10 @@
 
  @media (min-width: $BrackPoint-Secundario){
 
+
+.formulario-contacto-wraper{
+  padding:4px 4px;
+}
   .contiene_contacto_img{
   
   }
