--- a/resources/assets/sass/creative_template_mixer.scss
+++ b/resources/assets/sass/creative_template_mixer.scss
@@ -35,3 +35,4 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_portada_nav";
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_team_nueva";
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_contacto";
+@import "resources/assets/sass/Secciones_y_Helpers/Helpers_wrapers";
