--- a/resources/assets/sass/creative_template_mixer.scss
+++ b/resources/assets/sass/creative_template_mixer.scss
@@ -36,3 +36,6 @@
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_team_nueva";
 @import "resources/assets/sass/Secciones_y_Helpers/Seccion_contacto";
 @import "resources/assets/sass/Secciones_y_Helpers/Helpers_wrapers";
+
+
+@import "resources/assets/sass/Secciones_y_Helpers/Modulo_blog";
