--- a/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
@@ -19,6 +19,7 @@
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 10px;
+  color:$color-black;
 
 }
 
@@ -26,6 +27,7 @@
   font-weight: 300;
   margin: 0 0 10px;
   font-size: 24px;
+  color:$color-black;
 }
 
 
@@ -69,5 +71,9 @@
 
   .contenedor-listado-noticias{
     width: 65%;
+  }
+
+  .post-title{
+    font-size: 36px;
   }
 }
