--- a/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
@@ -61,6 +61,20 @@
  }
 
 
+ .post-individual-p{
+    line-height: 1.5;
+    margin: 30px 0;
+    font-size: 20px;
+ }
+
+ .post-individual-section-titulo{
+   font-size: 36px;
+   font-weight: 700;
+   margin-top: 60px;
+
+ }
+
+
 
 
 @media (min-width: $BrackPoint-Primario){}
