--- a/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Modulo_blog.scss
@@ -74,6 +74,23 @@
 
  }
 
+ .post-img-secundarias{
+  max-width: 100%;
+  height:auto;
+ }
+
+ .post-img-texto{
+    font-size: 14px;
+    font-style: italic;
+    display: block;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    color: $color-gris-text;
+ }
+
 
 
 
