--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -77,4 +77,13 @@
 
 
 
+              .admin-img-section-img{
+                width: 100%;
+                padding:10px;
+                margin-top: 10px;
+              }
+
+
+
+
               
