--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -40,7 +40,7 @@
 }
 
 
-/* CLASES BOTONES */
+/* CLASES B O T O N E S */
 .boton-simple{
   background-color: $color-3; 
   color:white;
@@ -51,6 +51,19 @@
   font-weight:bold;
 }
 .boton-simple:hover{
+  background-color: $color-3-primary_hover; 
+}
+
+.boton-simple-chico{
+  background-color: $color-3; 
+  color:white;
+  padding: 10px 12px;
+  border-radius: 4px;
+  font-size:1rem; 
+  cursor: pointer;
+  font-weight:bold;
+}
+.boton-simple-chico:hover{
   background-color: $color-3-primary_hover; 
 }
 
