--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -1,6 +1,48 @@
 .producto-lista-contenedor{
-
   width: 100%;
-  
-
+  margin-top: 3px;
+  padding: 6px;
+  border-radius:4px; 
+  @include flexbox;       
+  @include flex-direction(row);
+  @include align-items(center); 
 }
+
+
+.producto-lista-contiene-img{
+  width: 30%;
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(center); 
+}
+
+  .producto-lista-img{
+    width: 50px;
+    height: auto;
+  }
+
+.producto-lista-contiene-name{
+  width: 50%;
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(flex-start); 
+  padding:0 8px;
+}
+
+  .producto-lista-name{
+    font-size: 12px;    
+    font-weight: bold;
+  }
+
+.producto-lista-contiene-precio{
+  width: 20%;
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(center); 
+}
+
+ .producto-lista-precio{
+  font-weight: bold;
+  font-size: 16px;
+
+ }
