--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -1,3 +1,13 @@
+
+.producto-lista-categoria-name{
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+
+
+
 .producto-lista-contenedor{
   width: 100%;
   margin-top: 3px;
@@ -7,6 +17,12 @@
   @include flex-direction(row);
   @include align-items(center); 
 }
+
+.producto-lista-contenedor:hover{
+  background-color:$color-grey0 ;
+}
+
+
 
 
 .producto-lista-contiene-img{
