--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -16,6 +16,7 @@
   @include flexbox;       
   @include flex-direction(row);
   @include align-items(center); 
+  border-bottom: solid 1px $color-grey0 ;
 }
 
 .producto-lista-contenedor:hover{
