--- a/resources/assets/sass/Modulos/producto_pagina_individual.scss
+++ b/resources/assets/sass/Modulos/producto_pagina_individual.scss
@@ -20,3 +20,13 @@
 
   }
 
+
+.producto-individual-descripcion{
+  margin-top: 30px;
+  margin-bottom:20px;
+  text-align: center;
+  color: $color-gris-text;
+  font-size: 14px;
+
+}
+
