--- a/resources/assets/sass/Modulos/producto_pagina_individual.scss
+++ b/resources/assets/sass/Modulos/producto_pagina_individual.scss
@@ -32,12 +32,15 @@
 
 
 .producto-individual-aclaracion-stock{
-  margin: 20px 0;
+  margin: 20px auto;
   border:solid 1px $color-3;
   padding: 20px;
   width: 80%;
   color:$color-3;
   font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+  
 }
 
 
