--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -75,6 +75,11 @@
 
 /* CLASES DE TEXTO */
 
+
+.text-center{
+  text-align: center;
+}
+
 .text-bold{
   font-weight: bold;
 }
@@ -85,6 +90,8 @@
 .text-color-black{
   color: $color-negro-para-textos;
 }
+
+
 
 .helper-aumenta-texto{
   font-size:1.2em;
