--- a/resources/assets/sass/Modulos/producto_pagina_individual.scss
+++ b/resources/assets/sass/Modulos/producto_pagina_individual.scss
@@ -49,3 +49,17 @@
   color:$color-gris-text;  
 }
 
+
+
+.producto-individual-precio{
+
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(center); 
+  width: 100%;
+  margin-top: 10px;
+  padding:10px;
+
+
+}
+
