--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -56,10 +56,11 @@
   @include flexbox;       
   @include flex-direction(column);
   @include align-items(center); 
+  color:$color-negro-para-textos;
 }
 
  .producto-lista-precio{
   font-weight: bold;
-  font-size: 16px;
+  font-size: 20px;
 
  }
