--- a/resources/assets/sass/Modulos/producto_pagina_individual.scss
+++ b/resources/assets/sass/Modulos/producto_pagina_individual.scss
@@ -33,19 +33,19 @@
 
 .producto-individual-aclaracion-stock{
   margin: 20px auto;
-  border:solid 1px $color-verde-texto-success;
-  padding: 20px;
+  background-color:$color-grey0;
+  padding: 10px;
   width: 80%;
   color:$color-verde-texto-success;
-  font-size: 16px;
+  font-size: 12px;
   text-align: center;
-  font-weight: bold;
+  
   
 }
 
 
 .producto-individual-aclaracion-no-stock{
-  border:solid 1px$color-gris-text;
+  
   color:$color-gris-text;  
 }
 
