--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -27,7 +27,7 @@
 
 
 .producto-lista-contiene-img{
-  width: 30%;
+  width: 25%;
   @include flexbox;       
   @include flex-direction(column);
   @include align-items(center); 
@@ -44,6 +44,7 @@
   @include flex-direction(column);
   @include align-items(flex-start); 
   padding:0 8px;
+  font-size: 14px;
 }
 
   .producto-lista-name{
@@ -52,7 +53,7 @@
   }
 
 .producto-lista-contiene-precio{
-  width: 20%;
+  width: 25%;
   @include flexbox;       
   @include flex-direction(column);
   @include align-items(center); 
