--- a/resources/assets/sass/Modulos/producto_pagina_individual.scss
+++ b/resources/assets/sass/Modulos/producto_pagina_individual.scss
@@ -35,10 +35,11 @@
   margin: 20px auto;
   background-color:$color-grey0;
   padding: 10px;
-  width: 80%;
+  width: 100%;
   color:$color-verde-texto-success;
   font-size: 12px;
   text-align: center;
+  border-radius:4px;
   
   
 }
