--- a/resources/assets/sass/Modulos/blog.scss
+++ b/resources/assets/sass/Modulos/blog.scss
@@ -1,17 +1,24 @@
 
-
-
-
-
-
 //listado individual asociado noticias_lista_individual.blade.php
 .contenedor-listado-noticias{
   width: 100%;
   padding: 0px 15px;
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(center); 
+
 }
 
 .post-preview{
- 
+ width: 100%;
+ padding:8px;
+ border-radius:4px;
+ cursor:pointer;
+
+}
+
+.post-preview:hover{
+ background-color:$color-grey0 ;
 
 }
 
@@ -20,6 +27,7 @@
   margin-top: 30px;
   margin-bottom: 10px;
   color:$color-black;
+  font-weight: 900;
 
 }
 
@@ -90,6 +98,29 @@
     border-bottom-left-radius: 5px;
     color: $color-gris-text;
  }
+
+
+
+
+ .video-responsive {
+width: 100%;
+  margin-top: 20px;
+position: relative;
+padding-bottom: 56.25%; /* 16/9 ratio */
+padding-top: 30px; /* IE6 workaround*/
+height: 0;
+overflow: hidden;
+}
+
+.video-responsive iframe,
+.video-responsive object,
+.video-responsive embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 
 
 
