--- a/resources/assets/sass/Modulos/producto_lista.scss
+++ b/resources/assets/sass/Modulos/producto_lista.scss
@@ -1,8 +1,10 @@
 
 .producto-lista-categoria-name{
-  font-size: 22px;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 8px;
+  width: 100%;
+  
 }
 
 
