--- a/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_colores_y_fuentes.scss
@@ -46,7 +46,7 @@ $Color-Gris-Claro-Para-Bordes: #dfdfdf;
 $color-negro-para-textos:#5b5b5b;
 
 /*verdes*/
-$color-verde-texto-success:#4BB543;
+$color-verde-texto-success:#28a745;
 
 
 /*Colores Rojos*/
