--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_precios.scss
@@ -33,8 +33,15 @@
   @include align-items(center); 
   @include flex-wrap(wrap); 
 }
+
+.Seccion_precio_contenedor_precio{
+  margin-right: 15px;
+  margin-bottom: 8px;
+}
   .Seccion_precio_moneda{
     color:$color-gris-text; 
+    margin-right: 4px;
+    font-size: 10px;
     
   }
 
@@ -72,7 +79,7 @@
 
 .Seccion_precio_lista_item{
   color: $color-gris-text;
-  font-size:12px;
+  font-size:10px;
   margin-top: 10px;
   font-family: $font-secondary;
 } 
