--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -23,6 +23,10 @@
 
 
 
+//layout de los paneles de empresa gestion
+@import "resources/assets/sass/Modulos/empresa_gestion_general";
+
+
 
 //Errores
 @import "resources/assets/sass/Estilo/Errores/Errores";
