--- a/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
@@ -8,7 +8,7 @@
   font-size: 20px;
   border: solid 1px transparent;
   border-radius: 4px;
-  margin: 15px auto;
+  margin: 15px 0;
   display: table;
   cursor:pointer;
 }
@@ -23,7 +23,7 @@
   font-family: arial;
   border: solid 1px transparent;
   border-radius: 4px;
-  margin: 15px auto;
+  margin: 15px 0;
   display: table;
   cursor:pointer;  
 }
