--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -35,6 +35,13 @@
   width:100%;
 }
 
+
+#form-admin-empresa-datos{
+  @include flexbox; 
+  @include flex-direction(column);
+  @include align-items(center);
+}
+
            .formulario-label-fiel{
              @include flexbox; 
              @include flex-direction(column);
