--- a/resources/assets/sass/Modulos/empresa_gestion_general.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_general.scss
@@ -13,5 +13,10 @@
 
 
 .empresa-gestion-contiene-input-busqueda{
-  width: 70%;
+  width: 60%;
 }
+
+ .empresa-gestion-input-busqueda{
+      height: 50px;
+      font-size: 18px;
+ }
