--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -68,6 +68,16 @@
 }
 
 
+.recuadro-validacion-pendiente{
+  padding:8px;
+  text-align: center;
+  line-height: 2;
+  background-color:$Color-Amarill-warning;
+  color: $color-negro-para-textos;
+  font-size: 10px;
+}
+
+
 
 
 
