--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -41,6 +41,7 @@
 //layout de los paneles de empresa gestion
 @import "resources/assets/sass/Modulos/empresa_gestion_general";
 @import "resources/assets/sass/Modulos/empresa_gestion_listado_socios";
+@import "resources/assets/sass/Modulos/empresa_gestion_formularios";  
 
 
 
