--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
@@ -36,6 +36,10 @@ a:hover, a:focus, a>p:hover, a>p:focus{
     outline: 0 none !important;
 }
 
+select:focus {
+    box-shadow: 0 0 3pt 2pt $color-3;    
+}
+
 
 *, *:before, *:after {
   box-sizing: border-box; 
