--- a/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_Recets.scss
@@ -36,22 +36,7 @@ a:hover, a:focus, a>p:hover, a>p:focus{
     outline: 0 none !important;
 }
 
-textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-.uneditable-input:focus {   
+.form-control:focus { 
   border:solid 3px $color-3 !important;
   box-shadow: none !important;
   outline: 0 none;
