--- a/resources/assets/sass/Modulos/empresa_gestion_general.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_general.scss
@@ -20,3 +20,23 @@
       height: 50px;
       font-size: 18px;
  }
+
+
+
+
+
+
+
+ .empresa-gestion-listado-contenedor{
+  padding:6px;
+  border-radius:6px;
+  margin-top: 4px;
+  width: 100%;
+  @include flexbox;       
+  @include flex-direction(row);
+  @include align-items(center); 
+
+ }
+ .empresa-gestion-listado-contenedor:hover{
+  background-color: $Color-Gris-Claro;
+ }
