--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -21,8 +21,48 @@
 
 
 /* CLASES DE TAMAÑO */
+.get_width_10{
+width: 10%;
+}
+
+.get_width_20{
+width: 20%;
+} 
+
+.get_width_30{
+width: 30%;
+}
+
+.get_width_40{
+width: 40%;
+}
+
+.get_width_50{
+width: 50%;
+}
+
+.get_width_60{
+width: 60%;
+}
+
+.get_width_70{
+width: 70%;
+}
+
+.get_width_80{
+width: 80%;
+}
+
+.get_width_90{
+width: 90%;
+}
+
 .get_width_100{
-  width:100%;
+width: 100%;
+}
+
+.get_height_100{
+height: auto;
 }
 
 .get_height_100{
