--- a/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_clases_pre_armadas.scss
@@ -14,6 +14,10 @@
   @include justify-content(space-around);
 }
 
+.flex-justifice-space-between{
+  @include justify-content(space-between);
+}
+
 .flex-wrap{
   @include flex-wrap(wrap); 
 }
