--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -58,10 +58,9 @@
 
 
               .formulario-label{                
-                padding:4px;                
-                color: black;                              
-                text-align: center;
-                font-size: 12px;
+                padding:2px 4px;                
+                color: black; 
+                font-size: 10px;
               }
 
               .formulario-field{
