--- a/resources/assets/sass/Admin/formularios/formulario_estilos.scss
+++ b/resources/assets/sass/Admin/formularios/formulario_estilos.scss
@@ -53,6 +53,26 @@
              background-color:$color-grey0;
              margin-top: 4px;
            }
+
+            //lo uso en la aprte de gestion
+            .formulario-label-fiel-sin-width{
+             @include flexbox; 
+             @include flex-direction(column);
+             @include align-items(flex-start);             
+             padding: 4px;
+             border-radius: 4px;
+             border:solid 1px transparent;
+             background-color:$color-grey0;
+             margin-top: 4px 4px 0 0;
+           }
+
+           //lo uso en la aprte de gestion
+           .titulo-dentro-de-form{
+            font-size: 28px;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 30px;
+           }
            
            
 
