--- a/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Helper_botones.scss
@@ -27,3 +27,47 @@
   display: table;
   cursor:pointer;  
 }
+
+
+
+
+/* CLASES B O T O N E S */
+.boton-simple{
+  background-color: $color-3; 
+  color:white;
+  padding: 20px 35px;
+  border-radius: 3px;
+  font-size:1rem; 
+  cursor: pointer;
+  font-weight:bold;
+}
+.boton-simple:hover{
+  background-color: $color-3-primary_hover; 
+}
+
+.boton-simple-blanco{
+  background-color: transparent; 
+  color:white;
+  padding: 20px 35px;
+  border-radius: 3px;
+  border:solid 2px white;
+  font-size:1rem; 
+  cursor: pointer;
+  font-weight:bold;
+}
+.boton-simple-blanco:hover{
+  background-color: $color-3-primary_hover; 
+}
+
+.boton-simple-chico{
+  background-color: $color-3; 
+  color:white;
+  padding: 10px 12px;
+  border-radius: 4px;
+  font-size:1rem; 
+  cursor: pointer;
+  font-weight:bold;
+}
+.boton-simple-chico:hover{
+  background-color: $color-3-primary_hover; 
+}
