--- a/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
@@ -12,7 +12,14 @@
 
 
 
+.entidad-lista-servicio-contiene-fecha{
+  padding: 4px;
+  border-radius:6px;
+  @include flexbox;       
+  @include flex-direction(column);
+  @include align-items(flex-start); 
 
+}
    .entidad-lista-servicio-fecha{
     font-size: 10px;
     margin-top: 1px;
