--- a/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
@@ -24,6 +24,14 @@
     font-size: 10px;
     margin-top: 1px;
     color: $color-gris-text;
-   }
+   } 
+
+   .entidad-lista-servicio-fecha-input{
+    font-size: 10px;
+    margin-top: 1px;
+    color: $color-gris-text;
+    background-color:transparent;
+    border-color:transparent;
+   } 
 
 
