--- a/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
@@ -61,6 +61,16 @@
    }
 
 
+   .lista-estado-activo{
+    padding: 6px;
+    border-radius:8px;
+    font-size: 12px;
+    text-align: center;
+    background-color: $Color-Gris-Claro;
+    font-weight: bold;
+   }
+
+
 
 
 
