--- a/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
@@ -68,6 +68,7 @@
     text-align: center;
     background-color: $Color-Gris-Claro;
     font-weight: bold;
+    color: $color-verde-texto-success;
    }
 
 
