--- a/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_listado_socios.scss
@@ -72,6 +72,17 @@
    }
 
 
+   .lista-estado-consumido{
+    padding: 6px;
+    border-radius:8px;
+    font-size: 12px;
+    text-align: center;
+    background-color: $Color-Amarill-warning;;
+    font-weight: bold;
+    color:  $Color-Texto-Warning;
+   }
+
+
 
 
 
