--- a/resources/assets/sass/Modulos/empresa_gestion_panel_spcio.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_panel_spcio.scss
@@ -40,20 +40,21 @@
   }
 
     .panel-socio-titulo-seccion{
-      font-size: 22px;
+      font-size: 18px;
       font-weight: bold;
       margin-bottom: 5px;
+      margin-left: 7px;
     }
 
     .panel-socio-contiene-servicios{
       padding:6px;
-      border-radius:8px;
-      border:solid 1px $Color-Gris-Claro;
+      border-radius:8px;      
       @include flexbox;       
       @include flex-direction(row);
       @include align-items(center); 
       @include flex-wrap(wrap); 
       @include justify-content(space-around); 
+      width: 100%;
 
     }
 
@@ -84,6 +85,10 @@
     font-size: 28px;
     font-weight: bold;
   }
+
+  .panel-socio-titulo-seccion{
+      font-size: 20px;
+    }
 
 
 
