--- a/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
+++ b/resources/assets/sass/Modulos/empresa_gestion_servicios_socios.scss
@@ -87,9 +87,9 @@
     border-radius:8px;
     font-size: 12px;
     text-align: center;
-    background-color: $Color-Gris-Claro;
+    background-color: $Color-info;
     font-weight: bold;
-    color:  $color-gris-text;
+    color: white;
     margin-top: 3px;
    }
 
